--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,8 +11,8 @@ jobs:
             - name: Log in to Docker Hub
               uses: docker/login-action@v3  
               with: 
-                username: priyankagupta2403
-                password: vvpna9598
+                username: ${{secrets.DOCKER_USER_NAME}}
+                password: ${{secrets.DOCKER_PASSWORD}}
             - name: Build and push Docker image
               uses: docker/build-push-action@v5  
               with:
