--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,17 +26,12 @@ jobs:
         runs-on: self-hosted
 
         steps:
-          - name: Check out
-            uses: actions/checkout@v4
-          - name: back to root folder
-            run: cd 
-          - name: deleting everything
-            run: docker compose down
-          - name: free up memory
-            run: |
-             docker rmi -f teamdualite/ai-server 
-             docker rmi -f nginx    
-          - name: pull fresh image
-            run: docker compose pull 
-          - name: running again
-            run: docker compose up --remove-orphans -d
+          - name: Pull Docker image
+            run: sudo docker pull ${{secrets.DOCKER_USER_NAME}}/bankhub:latest
+          - name: Delete old docker containers
+            run: sudo docker rm -f bank-hub|| true
+            
+          - name: Run Docker container
+            run: sudo docker run -d -p 80:80 --name bank-hub ${{secrets.DOCKER_USER_NAME}}/bankhub:latest
+           
+          
