--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,12 +26,15 @@ jobs:
         runs-on: self-hosted
 
         steps:
+          - name: Docker Login
+            run: sudo docker login -u ${{secrets.DOCKER_USER_NAME}} -p ${{secrets.DOCKER_PASSWORD}}
+            
           - name: Pull Docker image
             run: sudo docker pull ${{secrets.DOCKER_USER_NAME}}/bankhub:latest
           - name: Delete old docker containers
             run: sudo docker rm -f bank-hub|| true
             
           - name: Run Docker container
-            run: sudo docker run -d -p 80:80 --name bank-hub ${{secrets.DOCKER_USER_NAME}}/bankhub:latest
+            run: sudo docker run -p 3000:3000 -d --name bank-hub ${{secrets.DOCKER_USER_NAME}}/bankhub:latest
            
           
