--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,8 +26,13 @@ jobs:
         runs-on: self-hosted
 
         steps:
-          - name: Docker Login
-            run: sudo docker login -u ${{secrets.DOCKER_USER_NAME}} -p ${{secrets.DOCKER_PASSWORD}}
+          - name: Checkout the code
+            uses: actions/checkout@v3
+          - name: Log in to Docker Hub
+            uses: docker/login-action@v3  
+            with: 
+              username: ${{secrets.DOCKER_USER_NAME}}
+              password: ${{secrets.DOCKER_PASSWORD}}
             
           - name: Pull Docker image
             run: sudo docker pull ${{secrets.DOCKER_USER_NAME}}/bankhub:latest
